--- a/task1/assets/style.css
+++ b/task1/assets/style.css
@@ -135,8 +135,21 @@
     background: #357de7;
     color: #fff;
     font-size: 25px;
+    cursor: pointer;
 }
-
+.left button:hover{
+    background-color: #4ca746;
+    opacity: 0.3;
+}
+select{
+    width: 100%;
+    height: 40px;
+    margin-top: 15px;
+    padding-left: 15px;
+    background: rgb(230, 223, 223);
+    border: none;
+    border-radius: 5px;
+}
 
 
 
